--- a/templates/landing.tmpl
+++ b/templates/landing.tmpl
@@ -4,23 +4,26 @@
   <div class="cf" style="background: url(/static/img/back1.jpg) no-repeat center center fixed; background-size: cover; ">
     <div class="fl pa3 bg-white black-70 measure-narrow f3">
       <header class="bb b--black-70 pv4">
-        <h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">Beautifully written stories from real anonymous people</h3>
+        <h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">
+        Real stories by anonymous people</h3>
       </header>
       <section class="pt2 pb4">
 
         <p class="f5 lh-copy measure-wide">
 
-          <strong>stories, incognito</strong> is a place for you to share your story and to read the stories shared by others, for free. Each month we select a topic and invite anyone to write a story on that topic. The stories are submitted anonymously
-          to our editors who will copyedit and then publish your story along with the others on that topic at the end of each month.
+          Launched in January 2017, <span class="leader f4"><strong>stories, incognito</strong></span> is a minimalist online magazine for sharing true stories anonymously. There is no subscription, no ads, and no internet comments -  you will not be judged. All stories are published, regardless of content, so long that they adhere to the <a href="/privacy" target="_blank">privacy guidelines</a>. 
         </p>
 
         <p class="f4 lh-copy measure">
-          All the stories here are from real anonymous people, for you to read and enjoy for free. We only ask that you consider leaving a story after reading a story.
+        <strong>How it works</strong>: <a href="/topics" target="_blank">choose from available topics</a> and <a href="/write">write a story</a>. Your story will be copyedited and published online at the end of each month. <a href="/read">Read your story</a> and others in a simple, clutter-free way. 
         </p>
         <p class="f5 lh-copy measure-wide">
-          We aim to bring together stories from all across the world from all walks of life to remind us of the beauty and struggle in humanity and the importance of small moments in our lives. Think of this as Reader's Write, or the Metropolitan Diary, or Beautiful
+          All the stories here are from real anonymous people, for you to read and enjoy for free. We aim to bring together stories from all across the world from all walks of life to remind us of the beauty and struggle in humanity and the importance of small moments in our lives. Think of this as Reader's Write, or the Metropolitan Diary, or Beautiful
           Anonymous, except that here we consider <em>all stories</em> from everywhere in the world.
         </p>
+        <p class="f5 lh-copy measure-wide">
+        Read a story, leave a story.
+        </p>        
 
 
       </section>
