--- a/templates/write.tmpl
+++ b/templates/write.tmpl
@@ -58,6 +58,8 @@
 
 {{ template "messages" .}}
 
+{{ if .APIKey }}
+
   <section class="ph3 ph5-ns pv3 mb5" style="max-width: 66rem;">
     <h1 class="db f4 mb1">Submitting stories</h1>
     <span class="f6 db lh-copy measure-wide">
@@ -112,5 +114,16 @@
 
 }).call(this);
 </script>
+
+{{ else }}
+<style>
+footer{
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:100px;
+}
+</style>
+{{ end }}
 
 {{ template "footer" . }}
