--- a/templates/write.tmpl
+++ b/templates/write.tmpl
@@ -1,7 +1,7 @@
 {{ template "header" . }}
 <link rel="stylesheet" type="text/css" href="/static/css/trix.css">
-<script type="text/javascript" src="https://trix-editor.org/js/trix.js"></script>
-<script src="https://trix-editor.org/js/attachments.js"></script>
+<script type="text/javascript" src="/static/js/trix.js"></script>
+<script src="/static/js/attachments.js"></script>
 
 <style>
   @import url("/static/css/trix.css");
