Add some meta info

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -3,7 +3,33 @@
 <html lang="en">
 
 <head>
-	<title> </title>
+
+<!-- COMMON TAGS -->
+<meta charset="utf-8">
+<title>Stories, Incognito</title>
+<!-- Search Engine -->
+<meta name="description" content="Read a story, leave a story. Beautiful anonymous stories from real people.">
+<meta name="image" content="https://storiesincognito.org/static/img/logo.jpg">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="Stories, Incognito">
+<meta itemprop="description" content="Read a story, leave a story. Beautiful anonymous stories from real people.">
+<meta itemprop="image" content="https://storiesincognito.org/static/img/logo.jpg">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Stories, Incognito">
+<meta name="twitter:description" content="Read a story, leave a story. Beautiful anonymous stories from real people.">
+<meta name="twitter:site" content="@storiesincognit">
+<meta name="twitter:creator" content="@storiesincognit">
+<meta name="twitter:image:src" content="https://storiesincognito.org/static/img/logo.jpg">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="Stories, Incognito">
+<meta name="og:description" content="Read a story, leave a story. Beautiful anonymous stories from real people.">
+<meta name="og:image" content="https://storiesincognito.org/static/img/logo.jpg">
+<meta name="og:url" content="https://storiesincognito.org">
+<meta name="og:site_name" content="Stories, Incognito">
+<meta name="og:locale" content="en_US">
+<meta name="og:type" content="website">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/static/css/tachyons.min.css">
 	<link rel="stylesheet" href="/static/css/style.css">
