--- a/templates/read.tmpl
+++ b/templates/read.tmpl
@@ -41,6 +41,19 @@
         </svg>
         <span class="pl1">Previous</span>
       </a>
+<script>
+$(function(){
+  // Bind the swipeleftHandler callback function to the swipe event on div.box
+  $( "body" ).on( "swipeleft", swipeLeftHandler );
+ 
+  // Callback function references the event target and adds the 'swipeleft' class to it
+  function swipeLeftHandler( event ){
+    window.location = "/read?story={{.}}";
+  }
+});
+</script>
+
+
     {{ end }}
     {{ with .Next }}
     <a href="/read?story={{.}}" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa3 ba border-box">
@@ -50,9 +63,24 @@
         <path d="M12 1 L26 16 L12 31 L8 27 L18 16 L8 5 z"></path>
       </svg>
     </a>
+<script>
+$(function(){
+  // Bind the swipeleftHandler callback function to the swipe event on div.box
+  $( "body" ).on( "swiperight", swipeRightHandler );
+ 
+  // Callback function references the event target and adds the 'swipeleft' class to it
+  function swipeRightHandler( event ){
+    window.location = "/read?story={{.}}";
+  }
+});
+</script>
+
     {{ end }}
   </div>
 </footer>
 </article>
+
+
+  <script src="/static/js/jquery.mobile-1.5.0-alpha.1.min.js"></script>
 
 {{ template "footer" . }}
