--- a/templates/navigation.tmpl
+++ b/templates/navigation.tmpl
@@ -16,7 +16,7 @@
 <i data-feather="edit-2" class="dib h1 w1 v-mid"></i>
 <span class="f6 pr2 v-mid">Write</span>
 </a>
-		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m pv2 ph1 v-mid" href="/topics">
+		<a class="f6 fw4 hover-white no-underline white-70 dn dib pv2 ph1 v-mid" href="/topics">
 <i data-feather="layers" class="dib h1 w1 v-mid"></i>
 <span class="f6 pr2  v-mid">Topics</span>
 </a>
