--- a/templates/read.tmpl
+++ b/templates/read.tmpl
@@ -8,7 +8,7 @@
 <img src="/static/img/{{ .Topic.Name }}.jpg">
 </div>
 
-    <h1 class="f1 mb0 mt0 lh-title">“{{ .Topic.Name }}”</h1>
+    <h1 class="f2 f1-l mb0 mt0 lh-title">“{{ .Topic.Name }}”</h1>
     <span class="pa1 pv1">
     <time class="f6 ttu tracked gray">{{ .Topic.Month }}</time>
   </span>
