--- a/templates/topics.tmpl
+++ b/templates/topics.tmpl
@@ -50,7 +50,6 @@
           <tr>
             <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white"></th>
             <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Topic</th>
-            <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white"># Stories</th>
           </tr>
         </thead>
         <tbody class="lh-copy">
@@ -69,11 +68,10 @@
             <td class="pv3 pr3 bb b--black-20">
             <img src="/static/img/{{ .Name }}.jpg" style="width:100%;" onerror="this.style.display='none'">
             <a class="f4 fw6 db black link hover-dark-pink pointer" href="{{ if .Open }}/write?topic={{.Name}}{{else}}/read?topic={{.Name}}{{end}}">{{.Name}}</a>
-            {{.Month}}
+            {{.Month}} {{if .NumberOfStories }}- <small>{{ .NumberOfStories }} stories</small>{{ end }}
 
             
             </td>
-            <td class="f3 f2-m f1-l pv3 pr3 bb b--black-20">{{ .NumberOfStories }}</td>
           </tr>
 
 {{end}}
