--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -15,27 +15,18 @@
 <article class="ph2">
  			<div class="dt-ns dt--fixed-ns w-100">
 				<main class="black-80">
-				<form action="/signin" method="POST" enctype="multipart/form-data" id="formdata" >
+				<form action="/login" method="POST" enctype="multipart/form-data" id="formdata" >
 	 <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
 		 <div class="mt3">
 			 <label class="db fw4 lh-copy f6" for="email">Email:</label>
 			 <input class="pa2 input-reset ba bg-transparent w-75 measure" name="email"  id="email">
 		 </div>
-		 <div class="mt3">
-			 <label class="db fw4 lh-copy f6" for="password">Password</label>
-			 <input class="b pa2 input-reset ba bg-transparent" type="password" name="password"  id="password">
-		 </div>
-		 <div class="mt3">
-			 <label class="pa0 ma0 lh-copy f6 pointer"><input type="checkbox"> Remember me</label>
-				 </div>
-
 	 </fieldset>
 	 <div class="">
 		 <input class="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib" type="submit" value="Sign in">
 	 </div>
 	 <div class="lh-copy mt3">
-		 <a href="/signup" class="f6 link dim black db">Sign up</a>
-		 <a href="#0" class="f6 link dim black db">Forgot your password?</a>
+Hello
 	 </div>
  </form>
 				</main>
