--- a/templates/navigation.tmpl
+++ b/templates/navigation.tmpl
@@ -40,7 +40,7 @@
 		{{ if .SignedIn }}
 		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m ml2 pv2 ph3 ba v-mid" href="/signout">Sign Out</a>
 		{{ else }}
-		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m ml2 pv2 ph3 ba v-mid" href="/signin">Sign In</a>
+		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m ml2 pv2 ph3 ba v-mid" href="/login">Sign In</a>
 		{{ end }}
 	</div>
 </nav>
